--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,6 @@ on:
   - push
   - pull_request
 
-env:
-  CI: true
-
 jobs:
   build:
 
@@ -18,11 +15,11 @@ jobs:
     strategy:
       # Node versions list
       matrix:
-        node-version: [20.x]
+        node-version: [18.x]
 
     steps:
-        # Check-out repository under GitHub workspace
-        # https://github.com/actions/checkout
+      # Check-out repository under GitHub workspace
+      # https://github.com/actions/checkout
       - uses: actions/checkout@v4
         # Step's name
       - name: Use Node.js ${{ matrix.node-version }}
@@ -32,17 +29,18 @@ jobs:
         # The Node.js version to configure
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-      - run: make install
-      - run: make lint
-      - run: make test
-      - name: Test & publish code coverage
-        # Publish code coverage on Code Climate
-        # https://github.com/paambaati/codeclimate-action
-        uses: paambaati/codeclimate-action@v5.0.0
-        # Add Code Climate secret key
+
+      - name: npm install, build
+        # Install and build project
+        run: |
+          make install
+          make build
+        # Add environment variables
         env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+          CI: true
+
+      - name: Run linter
+        run: make lint
+
+      - name: Run tests
+        run: make test
