--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "scripts": {
     "test": "npx jest"
   },
+  "jest": {
+    "verbose": true
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/igshipilov/frontend-project-11.git"
@@ -25,6 +28,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "debug": "^4.3.4",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash": "^4.17.21",
     "npm-check-updates": "^16.6.2",
     "sass": "^1.57.1",
