--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^27.2.2",
     "html-webpack-plugin": "^5.6.0",
