--- a/package.json
+++ b/package.json
@@ -2,18 +2,9 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "RSS-agregator",
-  "bin": {
-    "rss-agregator": "bin/rss-agregator.js"
-  },
-  "simple-git-hooks": {
-    "pre-push": "make lint"
-  },
   "scripts": {
-    "test": "npx jest",
+    "test": "jest --colors",
     "start": "webpack serve"
-  },
-  "jest": {
-    "verbose": true
   },
   "repository": {
     "type": "git",
@@ -22,6 +13,14 @@
   "author": "Igor Shipilov",
   "license": "ISC",
   "homepage": "https://github.com/igshipilov/frontend-project-11#readme",
+  "jest": {
+    "verbose": true,
+    "testEnvironmentOptions": {
+      "url": "http://localhost/"
+    },
+    "testEnvironment": "jsdom"
+  },
+  "main": "src/init.js",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
@@ -59,6 +58,5 @@
   },
   "bugs": {
     "url": "https://github.com/igshipilov/frontend-project-11/issues"
-  },
-  "main": "index.js"
+  }
 }
