--- a/package.json
+++ b/package.json
@@ -24,34 +24,33 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
-    "debug": "^4.3.4",
-    "jest-environment-jsdom": "^29.7.0",
+    "npm-check-updates": "^16.10.11",
     "lodash": "^4.17.21",
-    "npm-check-updates": "^16.6.2",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.19.1",
     "@babel/preset-env": "^7.23.9",
-    "@jest/globals": "^29.6.0",
-    "autoprefixer": "^10.4.17",
+    "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "debug": "^4.3.4",
     "eslint": "^8.56.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jest": "^27.2.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.6.0",
     "jest-cli": "^29.6.0",
-    "npm-check-updates": "^16.10.11",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss-loader": "^8.1.0",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.1.0",
-    "simple-git-hooks": "^2.8.1",
+    "postcss-preset-env": "^7.8.3",
     "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.0"
