--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "main": "src/init.js",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "ajv": "^8.12.0",
+    "bootstrap": "^5.3.2",
     "lodash": "^4.17.21",
     "npm-check-updates": "^16.10.11"
   },
@@ -32,6 +34,7 @@
     "@babel/preset-env": "^7.23.9",
     "babel-jest": "^29.3.1",
     "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
     "debug": "^4.3.4",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -43,7 +46,11 @@
     "jest": "^29.6.0",
     "jest-cli": "^29.6.0",
     "jest-environment-jsdom": "^29.7.0",
+    "postcss-loader": "^8.1.0",
     "postcss-preset-env": "^7.8.3",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
