--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.8",
     "ajv": "^8.12.0",
     "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
     "lodash": "^4.17.21",
     "npm-check-updates": "^16.10.11"
   },
