--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "npm-check-updates": "^16.10.11"
+    "npm-check-updates": "^16.10.11",
+    "on-change": "^5.0.1",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
