--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -42,5 +42,5 @@ jobs:
       - name: Run linter
         run: make lint
 
-      - name: Run tests
-        run: make test
+      # - name: Run tests
+        # run: make test
