--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv": "^8.12.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "i18next": "^23.8.2",
     "lodash": "^4.17.21",
     "npm-check-updates": "^16.10.11",
     "on-change": "^5.0.1",
