--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "ajv": "^8.12.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "i18next": "^23.8.2",
