package.json add type: module

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.0.1",
   "description": "RSS-agregator",
+  "type": "module",
   "scripts": {
     "test": "jest --colors",
     "start": "webpack serve"
