--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,8 +9,13 @@ env:
   node: true
   jest: true
   browser: true
+  es2021: true
 
 parser: "@babel/eslint-parser"
+
+parserOptions:
+  ecmaVersion: latest
+  sourceType: module
 
 extends:
   - "airbnb-base"
