--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     },
     "testEnvironment": "jsdom"
   },
-  "main": "main.js",
+  "main": "index.js",
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "ajv": "^8.12.0",
