--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,7 @@ root: true
 
 plugins:
   - jest
-  - babel
+  # - babel
 
 env:
   node: true
@@ -11,7 +11,7 @@ env:
   browser: true
   es2021: true
 
-parser: "@babel/eslint-parser"
+# parser: "@babel/eslint-parser"
 
 parserOptions:
   ecmaVersion: latest
