--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jest": "^27.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
     "postcss-loader": "^7.3.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
@@ -30,6 +32,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "i18next": "^23.7.8",
+    "lodash": "^4.17.21",
     "on-change": "^4.0.2",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
