--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "RSS-agregator",
   "type": "module",
   "scripts": {
-    "test": "jest --colors",
-    "start": "webpack serve"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
+    "develop": "npx webpack serve",
+    "build": "rm -rf dist && NODE_ENV=production npx webpack"
   },
   "engines": {
     "node": ">=18"
