--- a/package.json
+++ b/package.json
@@ -20,31 +20,45 @@
   "license": "ISC",
   "homepage": "https://github.com/igshipilov/frontend-project-11#readme",
   "main": "index.js",
-  "devDependencies": {
-    "css-loader": "^6.8.1",
-    "eslint": "^8.55.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "jest": "^29.7.0",
-    "postcss-loader": "^7.3.3",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.2",
+    "ajv": "^8.12.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
-    "i18next": "^23.7.8",
+    "express": "^4.18.2",
+    "i18next": "^23.8.2",
     "lodash": "^4.17.21",
-    "on-change": "^4.0.2",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "yup": "^1.3.2"
+    "npm-check-updates": "^16.10.11",
+    "on-change": "^5.0.1",
+    "yup": "^1.3.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/preset-env": "^7.23.9",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "debug": "^4.3.4",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.2.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.6.0",
+    "jest-cli": "^29.6.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss-loader": "^8.1.0",
+    "postcss-preset-env": "^7.8.3",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
+    "style-loader": "^3.3.4",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.1"
   },
   "bugs": {
     "url": "https://github.com/igshipilov/frontend-project-11/issues"
