--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^27.9.0",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
