package.json: change name to "@hexlet/code"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-project-11",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "RSS-Agregator",
   "main": "index.js",
