--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "frontend-project-11": "bin/render.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint .",
+    "develop": "npx webpack serve",
+    "build": "rm -rf dist && NODE_ENV=production npx webpack"
   },
   "author": "",
   "license": "ISC",
