--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "RSS-Agregator",
-  "main": "index.js",
+  "description": "Rss agregator",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npx eslint .",
@@ -13,29 +13,29 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.10.0",
-    "eslint": "^8.56.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.55.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-jest": "^27.9.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
-    "postcss-loader": "^8.1.0",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.90.3",
+    "postcss-loader": "^7.3.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.2",
     "i18next": "^23.7.8",
     "lodash": "^4.17.21",
     "on-change": "^4.0.2",
-    "sass": "^1.71.1",
-    "sass-loader": "^14.1.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
     "yup": "^1.3.2"
   }
 }
