--- a/package.json
+++ b/package.json
@@ -12,18 +12,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-
-  },
-  "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.7",
-    "bootstrap": "^5.3.3",
-    "i18next": "^23.10.0",
-    "lodash": "^4.17.21",
-    "on-change": "^5.0.1",
-    "sass": "^1.71.1",
-    "sass-loader": "^14.1.1",
-    "yup": "^1.3.3",
     "@types/node": "^20.11.20",
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
@@ -38,5 +26,16 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.2"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "i18next": "^23.10.0",
+    "lodash": "^4.17.21",
+    "on-change": "^5.0.1",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "yup": "^1.3.3"
   }
 }
