--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "lint": "npx eslint .",
     "develop": "npx webpack serve",
-    "build": "rm -rf dist && NODE_ENV=production npx webpack"
+    "build": "rm -rf dist && NODE_ENV=production npx webpack",
+    "preview": "npm run build && http-server ./dist -p 0"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "eslint-plugin-jest": "^27.9.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
